<resources>
    <string name="app_name">N1 籃球城市</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tab_event">動態</string>
    <string name="tab_news">發現</string>
    <string name="tab_post">新增</string>
    <string name="tab_team">團隊</string>
    <string name="tab_mall">商城</string>
</resources>
